First code cleanups